@@ -1,3 +1,3 @@
-EBUILD elsa-9999.ebuild 326 RMD160 9a8cbe05bdd351701a74d3282265375ce5f7299f SHA1 e6974ed5f4ef55404a77c9267de146bb9275e640 SHA256 ee59791cd6a417ea786d9d5ae2b5566c1afa94ebcf1cbfbdaafdc83b729fb462
-MISC ChangeLog 233 RMD160 f29580f8850ca6f1f612ab6437dabafe3b1d94b9 SHA1 31c85282b622495e59895c2454e1849a3355618f SHA256 c930673fbb60e28934e4ebf05ae316c8e073f970086761169444ed4574be8bf0
-MISC metadata.xml 228 RMD160 1890a2965ed780e661e20adcfc4f4cce5f7ca8e9 SHA1 777d2a3ad7f7075c7e75fa5055f3941440e4e875 SHA256 42ea435327140212f3beb05aafebad5053cbad84532f9bb78987de8540c6459a
+EBUILD elsa-9999.ebuild 510 RMD160 2335c857a320889a7450eb8657881128b93ebc56 SHA1 c22f4ed84f8c2bb79f89f0518bb55026512008b2 SHA256 060a8bed1a6d332a55bb009b631f4fdf0b7f1b92874eeb63d835e2f4f3239eb1
+MISC ChangeLog 336 RMD160 9f7d2838a853632c61f21ec9d349109295e7fa18 SHA1 855711750657f1b4d976542bd7f08e3f275b6abe SHA256 70ea062763bc3d35aa3a29765eb11d5664353b7944bffd112a9ed206d826b3d0
+MISC metadata.xml 325 RMD160 8b8648394a12dadf072a3e30e28f866e98b5d0cc SHA1 e2fa9c477672c8efd1eb6aae8f61a8b5ad28e950 SHA256 fa2cb86195944f06da54e11af44c7cba75f5c69c50b040445155c73d6e3d4ce0
