@@ -1,4 +1,4 @@
-# Copyright 1999-2010 Gentoo Foundation
+# Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
@@ -11,8 +11,21 @@ inherit efl
 
 DESCRIPTION="EFL based login manager"
 
-IUSE=""
+IUSE="consolekit pam"
 
 RDEPEND=">=media-libs/edje-9999
-	>=media-libs/elementary-9999"
+	>=media-libs/elementary-9999
+	consolekit? ( sys-auth/consolekit )
+	pam? ( virtual/pam )
+	"
+
 DEPEND="${RDEPEND}"
+
+src_configure() {
+	export MY_ECONF="
+	$(use_enable pam)
+	$(use_enable consolekit)
+	"
+
+	efl_src_configure
+}
