@@ -5,4 +5,7 @@
 <maintainer>
  <email>enlightenment@gentoo.org</email>
 </maintainer>
+<use>
+  <flag name="consolekit">Enables support for authorization using consolekit</flag>
+</use>
 </pkgmetadata>
