@@ -1,6 +1,9 @@
 # ChangeLog for x11-misc/elsa
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  29 Aug 2011; evadim <evadim@evadim.ru> elsa-9999.ebuild, metadata.xml:
+  add USE pam and consolekit
 
 *elsa-9999 (15 Jul 2010)
 
